--- a/views/books/detail.hbs
+++ b/views/books/detail.hbs
@@ -125,7 +125,7 @@
                                     </div>
                                 </div>
                                 <div class="why-text">
-                                    <a href="/books/{{id}}">
+                                    <a href="/books/{{_id}}">
                                         <h4 class="link" >{{title}}</h4>
                                     </a>
                                     <h5>{{basePrice}}</h5>
