--- a/views/books/list.hbs
+++ b/views/books/list.hbs
@@ -65,7 +65,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="why-text">
-                                                    <a href="/books/{{id}}">
+                                                    <a href="/books/{{_id}}">
                                                     <h4 class="link" >{{title}}</h4>
                                                     </a>
                                                     <h5>{{basePrice}}</h5>
@@ -100,7 +100,7 @@
                                             </div>
                                             <div class="col-sm-6 col-md-6 col-lg-8 col-xl-8">
                                                 <div class="why-text full-width">
-                                                    <a href="/books/{{id}}">
+                                                    <a href="/books/{{_id}}">
                                                         <h4 class="link" >{{title}}</h4>
                                                     </a>
                                                     <h5>{{basePrice}}</h5>
