--- a/views/books/list.hbs
+++ b/views/books/list.hbs
@@ -163,5 +163,24 @@
         </div>
     </div>
 
+<div class="paginate-center">
+    <ul>
+        {{#paginate pagination type="first"}}
+            <li {{#if disabled}}class="disabled" {{/if}}style="float:left; padding-left: 30px;"><a href="?p={{n}}">First</a></li>
+        {{/paginate}}
+        {{#paginate pagination type="previous"}}
+            <li {{#if disabled}}class="disabled" {{/if}}style="float:left;padding-left: 30px"><a href="?p={{n}}">Prev</a></li>
+        {{/paginate}}
+        {{#paginate pagination type="middle" limit="2"}}
+            <li {{#if active}}class="active" {{/if}}style="float:left;padding-left: 30px"><a href="?p={{n}}">{{n}}</a></li>
+        {{/paginate}}
+        {{#paginate pagination type="next"}}
+            <li {{#if disabled}}class="disabled"   {{/if}}style="float:left;padding-left: 30px"><a href="?p={{n}}">Next</a></li>
+        {{/paginate}}
+        {{#paginate pagination type="last"}}
+            <li {{#if disabled}}class="disabled"  {{/if}}style="float:left;padding-left: 30px"><a href="?p={{n}}">Last</a></li>
+        {{/paginate}}
+    </ul>
+</div>
 
 
