--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -96,7 +96,7 @@
                     <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
                         <li ><a class="nav-link">                                </a></li>
                         <li class="nav-item active"><a class="nav-link" href="/">Trang chủ</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/">Thông Tin Về Chúng Tôi</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/about">Thông Tin Về Chúng Tôi</a></li>
                         <li class="dropdown">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Cửa Hàng</a>
                             <ul class="dropdown-menu">
@@ -106,7 +106,7 @@
                                 <li><a href="/">Danh sách yêu thích</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="/">Liên hệ chúng tôi</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/contact">Liên hệ chúng tôi</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
