--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -44,7 +44,7 @@
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <div class="our-link">
                     <ul>
-                        <li><a href="#"><i class="fa fa-user s_color"></i> TÀI KHOẢN</a></li>
+                        <li><a href="/users/profile"><i class="fa fa-user s_color"></i> TÀI KHOẢN</a></li>
                         <li><a href="#"><i class="fas fa-location-arrow"></i> VỊ TRÍ CỬA HÀNG</a></li>
                     </ul>
                 </div>
