--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -51,11 +51,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <div class="login-box">
-                    <select id="basic" class="selectpicker show-tick form-control" data-placeholder="Sign In" onChange="window.location.href=this.value" style="width: +600px;">
-                        <option>Đăng kí / Đăng nhập</option>
-                        <option value="/signup">Đăng kí</option>
-                        <option value="/login">Đăng nhập</option>
-                    </select>
+                    <a id="basic" style="color: #ffffff;font-weight: 700;text-transform: uppercase; font-size: 14px;" href="/login">Đăng nhập</a>
                 </div>
                 <div class="text-slid-box">
                     <div id="offer-box" class="carouselTicker">
