--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -18,10 +18,10 @@
     <div class="cart-box-main" style="background-color: #111111">
         <div style="height: 33.5rem; background-color: #111111;display: flex;justify-content:center">
             <div style="width: 700px;height: 550px;background-color: #F3F3F3; padding-top: 75px;">
-                <div class="login-signup-center"><h1>ĐĂNG NHẬP</h1></div>
-                <div class="login-signup-center"><input type="text" name="username" id="user" placeholder="Tên đăng nhập/Email/Số điện thoại" style="width: 500px"></div>
-                <div class="login-signup-center"><input type="password" name="password" id="pass" placeholder="Mật khẩu" style="width: 500px"></div>
-                <div class="login-signup-button-center"><button class="login-button">Đăng nhập</button></div>
+                <div class="login-signup-center" style="margin-bottom: 30px;"><h1>ĐĂNG NHẬP</h1></div>
+                <div class="login-signup-center" style="margin-bottom: 30px;" ><input type="text" name="username" id="user" placeholder="Tên đăng nhập/Email/Số điện thoại" style="width: 500px"></div>
+                <div class="login-signup-center" style="margin-bottom: 30px;" ><input type="password" name="password" id="pass" placeholder="Mật khẩu" style="width: 500px"></div>
+                <div class="login-signup-button-center" style="margin-bottom: 30px;"><button class="login-button">Đăng nhập</button></div>
                 <div class="login-signup-center" style="margin-bottom: 10px"><h3>Hoặc đăng nhập</h3></div>
                 <div class="login-signup-button-center">
                     <button class="facebook-button">
