--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -12,31 +12,62 @@
     </div>
 </div>
 
-<form>
+
     <div class="cart-box-main" style="background-color: #111111">
-        <div style="height: 39rem; background-color: #111111;display: flex;justify-content:center">
+        <div style="height: 38rem; background-color: #111111;display: flex;justify-content:center">
+          <form action="/signup/success" method="post" onsubmit="return validation(this)">
             <div style="width: 700px;height: 750px;background-color: #F3F3F3; padding-top: 40px;">
                 <div class="login-signup-center"><h1>ĐĂNG KÍ</h1></div>
-                <div class="login-signup-center"><input type="text" name="name" id="name-signup" placeholder="Họ và tên của bạn" style="width: 500px"></div>
-                <div class="login-signup-center"><input type="text" name="phone" id="phone-signup" placeholder="Số điện thoại" style="width: 500px"></div>
-                <div class="login-signup-center"><input type="text" name="email" id="email-signup" placeholder="Địa chỉ email" style="width: 500px"></div>
-                <div class="login-signup-center"><input type="password" name="password-signup" id="pass-signup" placeholder="Password" style="width: 500px"></div>
-                <div class="login-signup-center">
+                <div class="login-signup-center"><input type="text" name="username" id="username-signup" placeholder="username" style="width: 500px" onchange="checkUserNameExist(this.value)"></div>
+
+                <div class="login-signup-center-error">
+                  <p class="error"id="username-signup-error"></p>
+                </div>
+
+
+                <div class="login-signup-center"><input type="text" name="phone" id="phone-signup" placeholder="Số điện thoại" style="width: 500px" onchange="checkPhone(this.value)"></div>
+
+                <div class="login-signup-center-error">
+                  <p class="error" id="phone-signup-error"></p>
+                </div>
+
+
+                <div class="login-signup-center"><input type="email" name="email" id="email-signup" placeholder="Địa chỉ email" style="width: 500px"onchange="checkEmailExist(this.value)" ></div>
+
+                <div class="login-signup-center-error">
+                  <p class="error" id="email-signup-error"></p>
+                </div>
+
+
+                <div class="login-signup-center"><input type="password" name="password" id="pass-signup" placeholder="Password" style="width: 500px"></div>
+
+                <div class="login-signup-center-error">
+                  <p style="display: inline-block; color:red" id="password-signup-error"></p>
+                </div>
+
+                <div class="login-signup-center"><input type="password" name="re-password" id="re-pass-signup" placeholder="Re-enter password" style="width: 500px"></div>
+
+                <div class="login-signup-center-error">
+                  <p style="display: inline-block; color:red" id="re-password-signup-error"></p>
+                </div>
+
+                <div class="login-signup-center" style="margin-bottom:30px">
                     <select name="gender" style="width: 500px">
                         <option value="Nam">Nam</option>
                         <option value="Nữ">Nữ</option>
                         <option value="Khác">Khác</option>
                     </select>
                 </div>
-                <div class="login-signup-center">
-                    <input type="date" name="birthday" id="birthday-signup" style="width: 500px">
-                </div>
+
 
                 <div class="login-signup-button-center">
-                    <button class="login-button">Đăng kí</button>
+                    <button class="login-button" type="submit" >Đăng kí</button>
                 </div>
-
-                <div class="login-signup-center">
+                <div class="login-signup-center-error">
+                  <p style="display: inline-block; color:red" id="signup-error"></p>
+                </div>
+                </form>
+                <div class="login-signup-center" style="margin-bottom: 30px;">
                     <p style="display: inline-block">Bằng việc đăng kí, bạn đã đồng ý với shop về </p>
                     <p style="color:red;display: inline-block;">Điều khoản dịch vụ</p>
                     <p style="display: inline-block;">&</p>
@@ -48,6 +79,6 @@
                     <a href="login">Đăng nhập</a>
                 </div>
             </div>
+          
         </div>
     </div>
-</form>
