--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -27,14 +27,15 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="first_name"><h4>First name</h4></label>
+                                <label for="first_name"><h4>First Name</h4></label>
                                 <input type="text" class="form-control" name="first_name" id="first_name" value="{{firstName}}" title="enter your first name if any.">
                             </div>
                         </div>
-                        <div class="form-group">
+
+                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="last_name"><h4>Last name</h4></label>
+                                <label for="first_name"><h4>Last Name</h4></label>
                                 <input type="text" class="form-control" name="last_name" id="last_name" value="{{lastName}}" title="enter your last name if any.">
                             </div>
                         </div>
