+ add login feature + update profile feature + add logout feature

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -137,3 +137,40 @@ h4.link:hover
     display: inline-block; color:green;
 }
 
+
+.dropbtn {
+  background-color: #000000;
+  color: white;
+  border: none;
+  font-size: 16px;
+}
+
+.dropbtn::before
+{
+    content: "\f007";
+    margin-right: 5px;
+    font-family: "Font Awesome 5 Free";
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   z-index: 9999;
+   right:0px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color:#000000;}
