--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,9 +1,9 @@
 
 
-<hr>
-<div class="container bootstrap snippet">
+
+<div class="container bootstrap snippet" style="padding-top:50px; padding-bottom:50px;">
     <div class="row">
-        <div style="margin-left: 93px;"><h1>User name</h1></div>
+        <div style="margin-left: 93px;"><h1>{{firstName}} {{lastName}}</h1></div>
     </div>
     <div class="row">
         <div class="col-sm-3"><!--left col-->
@@ -28,7 +28,7 @@
 
                             <div class="col-xs-6">
                                 <label for="first_name"><h4>First Name</h4></label>
-                                <input type="text" class="form-control" name="first_name" id="first_name" value="{{firstName}}" title="enter your first name if any.">
+                                <input type="text" class="form-control" name="firstName" id="first_name" value="{{firstName}}" title="enter your first name if any.">
                             </div>
                         </div>
 
@@ -36,7 +36,7 @@
 
                             <div class="col-xs-6">
                                 <label for="first_name"><h4>Last Name</h4></label>
-                                <input type="text" class="form-control" name="last_name" id="last_name" value="{{lastName}}" title="enter your last name if any.">
+                                <input type="text" class="form-control" name="lastName" id="last_name" value="{{lastName}}" title="enter your last name if any.">
                             </div>
                         </div>
 
@@ -90,7 +90,7 @@
                             </div>
                         </div>
                     </form>
-                    <hr>
+                  
                 </div><!--/tab-pane-->
             </div><!--/tab-pane-->
         </div><!--/tab-content-->
