--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -54,6 +54,7 @@
                         <button class="dropbtn"style="height:auto!important;font-weight:700;">{{user.account}}</button>
                         <div class="dropdown-content" style="margin-right: 20px;">
                             <a href="/users/profile">Tài khoản</a>
+                            <a href="/users/change-pasword">Đổi mật khẩu</a>
                             <a href="">Giỏ hàng</a>
                             <a href="/users/logout">Logout</a>
                         </div>
