--- a/views/user/changePassword.hbs
+++ b/views/user/changePassword.hbs
@@ -11,6 +11,7 @@
                 <![endif]-->
                 <table cellpadding="0" cellspacing="0" border="0" align="center" style="width: 100%; max-width: 600px; background-color: #FFF; border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;"
                 id="contentTable">
+                <form action='/users/change-password' method='post' onsubmit="return checkPasswordChangeForm(this)">
                   <tr>
                     <td width="600" valign="top" align="center" style="border-collapse:collapse;">
                       <table align='center' border='0' cellpadding='0' cellspacing='0' style='border: 1px solid #E0E4E8;'
@@ -22,7 +23,19 @@
                         </tr>
                         <tr>
                           <td align='left' style='padding: 0 56px 28px 56px;' valign='top'>
-                            <div style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 18px; color: #333;'>Bạn vừa mới đăng kí tài khoản với email <strong>{{email}}</strong>. Hãy đảm bảo rằng đây chính là email của bạn bằng cách kiểm tra và xác thực nó trong hòm thư của bạn</div>
+                              
+                            <div>
+                                <label for="old-pass"><h4>Mật khẩu cũ: </h4></label>
+                                <input type='password' id='old-pass' name='oldPassword' style="margin-left: 38px;" onchange="checkPasswordExist(this.value)">
+                            </div>
+                            <div>
+                                <label for="new-pass"><h4>Mật khẩu mới: </h4></label>
+                                <input type='password' id='new-pass' name='newPassword'style="margin-left: 30px;" onchange="checkPasswordChange(this.value)">
+                            </div>
+                            
+                            <div>
+                                <p class="error" id="change-error"></p>
+                            </div>
                           </td>
                         </tr>
                         <tr>
@@ -35,8 +48,8 @@
                                 fillcolor="#E15718">
                                   <w:anchorlock/>
                                 <![endif]-->
-                                <a style="background-color:#B0B435;border-radius:50px;color:#ffffff;display:inline-block;font-family: &#39;lato&#39;, &#39;Helvetica Neue&#39;, Helvetica, Arial, sans-serif;font-size:18px;line-height:44px;text-align:center;text-decoration:none;width:250px;-webkit-text-size-adjust:none;"
-                                href="/login">Tôi chấp nhận</a>
+                                <button style="background-color:#B0B435;border-radius:50px;color:#ffffff;display:inline-block;font-family: &#39;lato&#39;, &#39;Helvetica Neue&#39;, Helvetica, Arial, sans-serif;font-size:18px;line-height:44px;text-align:center;text-decoration:none;width:250px;-webkit-text-size-adjust:none;cursor:pointer"
+                                type='submit'>Đổi mật khẩu</button>
                                 <!--[if mso]>
                                 </v:roundrect>
                               <![endif]-->
@@ -50,7 +63,7 @@
                       <table align='center' border='0' cellpadding='0' cellspacing='0' width='100%'>
                         <tr>
                           <td align='center' style='padding: 30px 56px 28px 56px;' valign='middle'>
-<span style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 16px; color: #A7ADB5; vertical-align: middle;'>Nếu email này không phải của bạn <a href="mailto:myshopuser123@gmail.com">hãy liên lạc với chúng tôi</a>!</span>
+<span style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 16px; color: #A7ADB5; vertical-align: middle;'>Nếu bị vấn đề gì khi đổi mật khẩu <a href="mailto:myshopuser123@gmail.com">hãy liên lạc với chúng tôi</a>!</span>
 
                           </td>
                         </tr>
@@ -65,6 +78,7 @@
                       </table>
                     </td>
                   </tr>
+                  </form>
                 </table>
                 <!--[if (gte mso 9)|(IE)]>
                 </td>
