--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -65,23 +65,10 @@
 
                             <div class="col-xs-6">
                                 <label for="email"><h4>Location</h4></label>
-                                <input type="text" class="form-control" id="location" value="{{location}}" title="enter a location">
+                                <input type="text" class="form-control" id="location" name="location" value="{{location}}" title="enter a location">
                             </div>
                         </div>
-                        <div class="form-group">
-
-                            <div class="col-xs-6">
-                                <label for="password"><h4>Password</h4></label>
-                                <input type="password" class="form-control" name="password" id="password" value="{{password}}" title="enter your password.">
-                            </div>
-                        </div>
-                        <div class="form-group">
-
-                            <div class="col-xs-6">
-                                <label for="password2"><h4>Verify</h4></label>
-                                <input type="password" class="form-control" name="password2" id="password2" value="{{password}}" title="enter your password2.">
-                            </div>
-                        </div>
+                        
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <br>
