--- a/views/index/login.hbs
+++ b/views/index/login.hbs
@@ -26,12 +26,12 @@
                 <div class="login-signup-center-error">
                   <p style="display: inline-block; color:red" id="login-error">{{message}}</p>
                 </div>
-                
-                
-                <div class="login-signup-center">
-                    <p>Chưa có tài khoản ?</p>
-                    <a href="/signup">Đăng kí</a>
+                <div class="login-signup-center-error">
+                    <a href="/recover-account" class='login-recover-signup' >Quên mật khẩu?</a>
+                      <a href="/signup" class="login-recover-signup" style="float:right"> Tạo tài khoản mới</a>
                 </div>
+                
+                
                 </div>
             </div>
         </div>
