--- a/views/user/recover-password.hbs
+++ b/views/user/recover-password.hbs
@@ -1,5 +1,8 @@
-<body style="width:100% !important;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;">
-    <table cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="margin:0; padding:0; width:100% !important; line-height: 100% !important; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;"
+
+  <div class="cart-box-main" style="background-color: #111111">
+        <div style=" background-color: #111111;display: flex;justify-content:center">
+            
+    <table cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="margin:0px; padding:0; width:100% !important; line-height: 100% !important; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; "
     width="100%">
       <tr>
         <td width="10" valign="top">&nbsp;</td>
@@ -11,7 +14,7 @@
                 <![endif]-->
                 <table cellpadding="0" cellspacing="0" border="0" align="center" style="width: 100%; max-width: 600px; background-color: #FFF; border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;"
                 id="contentTable">
-                <form action='/users/change-password' method='post' onsubmit="return checkPasswordChangeForm(this)">
+                <form action='/users/recover/{{id}}' method='post' onsubmit="return onsubmitRecoverPasswordValidation(this,{{json id}})">
                   <tr>
                     <td width="600" valign="top" align="center" style="border-collapse:collapse;">
                       <table align='center' border='0' cellpadding='0' cellspacing='0' style='border: 1px solid #E0E4E8;'
@@ -26,7 +29,7 @@
                               
                             <div>
                                 <label for="old-pass"><h4>Mật khẩu cũ: </h4></label>
-                                <input type='password' id='old-pass' name='oldPassword' style="margin-left: 38px;" onchange="checkPasswordExist(this.value)">
+                                <input type='password' id='old-pass' name='oldPassword' style="margin-left: 38px;" onchange="recoverPasswordValidation({{json id}},this.value)">
                             </div>
                             <div>
                                 <label for="new-pass"><h4>Mật khẩu mới: </h4></label>
@@ -89,5 +92,9 @@
         <td width="10" valign="top">&nbsp;</td>
       </tr>
     </table>
+  
+    </div>
+    </div>
+
     
-  </body>
+
